replaced asset urls

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -7,7 +7,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(/dist/fonts/ocrb.woff2) format('woff2');
+  src: url(dist/fonts/ocrb.woff2) format('woff2');
 }
 
 body {
