various sidebar updates

--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -321,6 +321,7 @@ button,
     max-height: 40px;
     word-break: break-word;
     line-height: 18px;
+    white-space: pre-wrap;
   }
 
   &__upc {
