--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -23,15 +23,14 @@ body > main {
   overflow: auto;
 
   &__logo {
-    margin-bottom: 8px;
+    margin-bottom: 12px;
     display: flex;
-    align-items: center;
-    padding: 0 4px;
+    padding: 0 8px;
     gap: 8px;
-    justify-content: center;
-  }
+    align-items: center;
+    justify-content: flex-start;
 
-    &__logo-container {
+    &-container {
       background-color: #292A2F;
       width: 36px;
       height: 36px;
@@ -47,11 +46,48 @@ body > main {
       }
     }
     
-    &__logo-title {
+    &-title {
       font-size: 16px;
       font-weight: 700;
       color: #292A2F;
     }
+  }
+
+  &__title {
+    font-size: 12px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #292A2F;
+    margin: 0 -20px;
+    padding: 8px 20px 8px 28px;
+    border-bottom: 1px solid rgba(0,0,0,0.1);
+    cursor: pointer;
+
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    color: $text;
+    
+    svg {
+      width: 14px;
+      height: 14px;
+      stroke: #9197A5;
+    }
+  }
+
+  &__form {
+    margin: 12px 0 20px;
+    display: none;
+  
+    &--active {
+      display: block;
+    }
+  }
+
+  &__group {
+    display: flex;
+    gap: 8px;
+  }
 
   label {
     display: flex;
@@ -73,25 +109,18 @@ body > main {
     position: relative;
   }
 
-  fieldset {
-    margin: 0 0 20px;
-  }
-
   &__fields {
     margin-top: 0px;
-
-    h1 {
-      font-size: 14px;
-      font-weight: 700;
-      color: #292A2F;
-      margin: 12px -20px;
-      padding: 4px 20px 4px 28px;
-      border-bottom: 1px solid rgba(0,0,0,0.1);
-    }
   }
 
   textarea {
-    height: 44px;
+    height: 48px;
+  }
+
+  .quantity {
+    display: flex;
+    align-items: center;
+    gap: 8px;
   }
 
   .qrlink {
@@ -144,13 +173,6 @@ body > main {
     }
   }
 
-  .color-picker {
-    display: grid;
-    align-items: center;
-    justify-content: center;
-    margin-top: 20px;
-  }
-
   .color-control {
     display: grid;
     grid-template-columns: 1fr 34px;
@@ -161,6 +183,7 @@ body > main {
     border: 1px solid $lines;
     border-radius: $border-radius;
     background-color: #ffffff;
+    cursor: pointer;
   }
 
   .color-reset {
@@ -176,6 +199,47 @@ body > main {
       height: 14px;
       stroke: #9197A5;
     }
+  }
+
+  .color-picker {
+    position: absolute;
+    background-color: #F7F8F9;
+    padding: 20px;
+    z-index: 5;
+    border-radius: 4px;
+    top: -9999px;
+    right: 0;
+    box-shadow: $paper;
+
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+
+    opacity: 0;
+    transform-origin: top right;
+    transform: scale(0);
+    transition: top 0s 0.4s, opacity 0.2s, transform 0.2s;
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: -10px;
+      right: 8px;
+      width: 0;
+      height: 0;
+      border-style: solid;
+      border-width: 0 10px 10px 10px;
+      border-color: transparent transparent #E3E5E8 transparent;
+    }
+  }
+
+  .color-picker--active {
+    top: 85%;
+    opacity: 1;
+    transform: scale(1);
+
+    transition: top 0s, opacity 0.1s, transform 0.2s;
   }
 }
 
