--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -55,19 +55,28 @@ button,
   display: grid;
   grid-template-columns: 1fr 38px;
   position: relative;
+  border-radius: $border-radius;
+  box-shadow: $inputs;
+  transition: box-shadow 0.2s;
 
-  & &-input {
-    border-radius: $border-radius 0px 0px $border-radius;
-    border: 1px solid $lines;
-    border-right: 0;
-    cursor: pointer;
+  &.active {
+    box-shadow: $input-focus;
   }
 
-  & &-button {
+  &-input {
+    border-radius: $border-radius 0px 0px $border-radius;
+    border: 0;
+    box-shadow: none;
+    cursor: pointer;
+    box-shadow: 0 0 0;
+
+    &:focus { box-shadow: none;}
+  }
+
+  &-button {
     border-radius: 0px $border-radius $border-radius 0px;
-    border: 1px solid $lines;
     background-color: #ffffff;
-    border-left: 0;
+    border: 0;
     cursor: pointer;
     display: flex;
     align-items: center;
@@ -133,7 +142,8 @@ button,
     top: -9999%;
     margin-top: 4px;
     background-color: #ffffff;
-    border: 1px solid $lines;
+    //border: 1px solid $lines;
+    box-shadow: $paper;
     width: 100%;
     border-radius: $border-radius;
     z-index: 2;
