--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -195,8 +195,8 @@ button,
   }
 
   // CHANGE SHIPPING MARK CARTON SIZE HERE
-  $carton-width: 18.3; // Inches
-  $carton-length: 11.2; // Inches
+  $carton-length: 18.3; // Inches
+  $carton-width: 11.2; // Inches
   $carton-height: 13.4; // Inches
   $carton-expanded: 50%;
   $carton-condensed: 30%;
@@ -216,9 +216,9 @@ button,
       height: 297mm;
     }
 
-    &--carton { padding: 0 0 $carton-expanded; }
-    &--carton-side { width: calc($carton-expanded * ($carton-length / $carton-height)); }
-    &--carton-front { width: calc($carton-expanded * ($carton-width / $carton-height)); }
+    &--carton { padding: 0 0 $carton-expanded; transition: all 0.5s; }
+    &--carton-front { width: calc($carton-expanded * ($carton-length / $carton-height)); }
+    &--carton-side { width: calc($carton-expanded * ($carton-width / $carton-height)); }
   }
 
   .preview__content--condensed & {
@@ -226,8 +226,8 @@ button,
     padding: 12px;
 
     &--carton { padding: 0 0 $carton-condensed; }
-    &--carton-side { width: calc($carton-condensed * ($carton-length / $carton-height)); }
-    &--carton-front { width: calc($carton-condensed * ($carton-width / $carton-height)); }
+    &--carton-front { width: calc($carton-condensed * ($carton-length / $carton-height)); }
+    &--carton-side { width: calc($carton-condensed * ($carton-width / $carton-height)); }
   }
 
   &--carton .scaler {
@@ -236,16 +236,18 @@ button,
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: all 0.5s;
   }
 
   &--carton-front .scaler {
-    width: #{$carton-width}in;
+    width: #{$carton-length}in;
     height: #{$carton-height}in;
   }
 
   &--carton-side .scaler {
-    width: #{$carton-length}in;
+    width: #{$carton-width}in;
     height: #{$carton-height}in;
+
   }
 
   @keyframes scaleAndExplode {
@@ -270,7 +272,7 @@ button,
   .page--carton & {
     width: 100%;
     height: 100%;
-    padding: 0.5in;
+    padding: 0.2in;
   }
 
   &__header {
@@ -502,37 +504,33 @@ button,
   font-size: 1.2in;
   height: 100%;
 
-  .page[data-type="shipping-front"] & {
-    //width: 13in;
-    //height: 7in;
-  }
-
-  .page[data-type="shipping-side"] & {
-    //width: 13in;
-  }
-
   &__content {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
+
+    .page[data-type="shipping-front"] & {
+      font-size: 100%;
+    }
+  
+    .page[data-type="shipping-side"] & {
+      font-size: 80%;
+    }
   }
 
-  &__sku::before { content: "SKU: "; font-size: 60%; margin-right: 2% }
+  &__sku::before { content: "SKU: "; font-size: 80%; margin-right: 2% }
   .page[data-type="shipping-front"] &__sku::before { font-size: 100%; }
-  &__quantity::before { content: "Qty per carton: "; }
-  &__gweight::before { content: "Gross Weight lbs: "; }
-  &__nweight::before { content: "Net Weight lbs: "; }
-  &__dims::before { content: "Carton Dims (LxWxH in): "; }
-  &__source::before { content: "Made in: "; }
-  &__po::before { content: "PO #: "; }
-  &__item-master::before { content: "Item Master: "; }
 
   &__sku {
     font-size: 80%;
     font-weight: 700;
     display: flex;
     align-items: flex-end;
+
+    .page[data-type="shipping-front"] & {
+      align-items: center;
+    }
 
     .sku__part {
       border: 2px solid #000000;
@@ -543,11 +541,67 @@ button,
     .sku__part:last-child { border-right-width: 2px; }
   }
 
-  &__meta, &__item-master {
-    font-size: 40%;
+  &__middle, &__bottom {
+    font-size: 50%;
+    font-weight: 400;
+  }
+
+  &__meta {
+    line-height: 170%;
   }
 
   &__description { font-weight: 700; }
+
+  &__source {
+    text-transform: capitalize;
+  }
+
+  &__upc, 
+  &__tihi {
+    border: 2px dashed rgba(0, 0, 0, 0.3);
+    position: absolute;
+    top: 50%;
+    right: 0.5in;
+    border-radius: 0.08in;
+    width: 3.2in;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    font-size: 0.2in;
+    font-weight: 700;
+    color: #B2B2B2;
+    
+    svg {
+      stroke: #B2B2B2;
+      width: 1in;
+      height: 1in;
+    }
+  }
+
+  &__upc {
+    height: 3.8in;
+    margin-top: -3.9in;
+  }
+
+  &__po {
+    display: inline-block;
+    border-bottom: 0.04in solid #000000;
+    min-width: 3.5in;
+  }
+
+  &__tihi {
+    height: 3.2in;
+    margin-top: 0.6in;
+    overflow: hidden;
+  }
+
+  .tihi-active {
+    border: 0;
+  }
+  .tihi-active svg {
+    display: none;
+  }
 }
 
 // Brenthaven Specific Styles
