--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -413,8 +413,6 @@ button,
     display: block;
     position: relative;
     height: 0;
-    //transition: all 0.5s;
-    //overflow: hidden;
   }
 
   .preview__content--expanded & {
@@ -426,7 +424,7 @@ button,
       height: 297mm;
     }
 
-    &--carton { padding: 0 0 $carton-expanded; transition: all 0.5s; }
+    &--carton { padding: 0 0 $carton-expanded; }
     &--carton-front { width: calc($carton-expanded * ($carton-length / $carton-height)); }
     &--carton-side { width: calc($carton-expanded * ($carton-width / $carton-height)); }
   }
@@ -440,6 +438,13 @@ button,
     &--carton-side { width: calc($carton-condensed * ($carton-width / $carton-height)); }
   }
 
+  &--carton .scaler-wrapper { 
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow: hidden; 
+  }
+
   &--carton .scaler {
     transform-origin: top left;
     position: absolute;
@@ -448,6 +453,17 @@ button,
     justify-content: center;
     overflow: hidden;
     //display: none;
+
+    &.rendering {
+      transform: scale(1) !important;
+      opacity: 0;
+    }
+
+    canvas {
+      position: absolute;
+      width: 100% !important;
+      height: auto !important;
+    }
   }
 
   &--carton-front .scaler {
@@ -459,6 +475,10 @@ button,
     width: #{$carton-width}in;
     height: #{$carton-height}in;
 
+  }
+
+  &--hiding {
+    animation: scaleAndExplode 0.2s forwards;
   }
 
   &--hidden {
