--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -367,16 +367,6 @@ button,
   }
 }
 
-.carton-separator {
-  display: none;
-
-  .page:not(.page--hidden) + .page + .page + &,
-  .page:not(.page--hidden) + .page + &,
-  .page:not(.page--hidden) + & {
-    display: block;
-  }
-}
-
 .page {
   color: #000000;
   display: flex;
@@ -407,12 +397,6 @@ button,
   $carton-expanded: 50%;
   $carton-condensed: 30%;
 
-  &--carton {
-    display: block;
-    position: relative;
-    height: 0;
-  }
-
   .preview__content--expanded & {
     margin: 40px 40px 0;
     padding: 40px;
@@ -436,26 +420,75 @@ button,
     &--carton-side { width: calc($carton-condensed * ($carton-width / $carton-height)); }
   }
 
-  &--carton .scaler-wrapper { 
+  &--carton {
+    display: block;
+    position: relative;
+    height: 0;
+  }
+
+  .scaler-wrapper { 
     position: absolute;
     width: 100%;
     height: 100%;
     overflow: hidden; 
+    border-radius: $border-radius;
+
+    // &.rendering {
+    //   background: linear-gradient(270deg, #ffffff, rgba(51, 65, 85, 0.08), rgba(0, 0, 0, 0.07), #ffffff);
+    //   background-size: 200% 200%;
+    //   animation: loading 2s ease-in-out infinite;
+    // }
+
+    &.rendering .scaler {
+      transition: opacity 0.2s, transform 0s 0.2s;
+      transform: scale(1) !important;
+      opacity: 0;
+    }
+
+    @keyframes loading {
+      0% {
+        background-position: 0% 50%;
+      }
+      50% {
+        background-position: 100% 50%;
+      }
+      100% {
+        background-position: 0% 50%;
+      }
+    }
+
+    /* HTML: <div class="loader"></div> */
+    &.rendering:before {
+      content: '';
+      display: block;
+      width: 36px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      aspect-ratio: 1;
+      --_g: no-repeat radial-gradient(farthest-side, rgba(101, 110, 129, 0.3) 94%,#0000);
+      background:
+        var(--_g) 0    0,
+        var(--_g) 100% 0,
+        var(--_g) 100% 100%,
+        var(--_g) 0    100%;
+      background-size: 40% 40%;
+      animation: l38 2s infinite; 
+    }
+    @keyframes l38 {
+      100% {background-position: 100% 0,100% 100%,0 100%,0 0}
+    }
   }
 
-  &--carton .scaler {
+  .scaler {
     transform-origin: top left;
     position: absolute;
     display: flex;
     align-items: center;
     justify-content: center;
     overflow: hidden;
-    //display: none;
-
-    &.rendering {
-      transform: scale(1) !important;
-      opacity: 0;
-    }
+    transition: opacity 0.2s, transform 0s 0s;
 
     canvas {
       position: absolute;
