changed html2canvas with html-to-image + other npm stuff

--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -490,7 +490,7 @@ button,
     overflow: hidden;
     transition: opacity 0.2s, transform 0s 0s;
 
-    canvas {
+    & > canvas, & > img {
       position: absolute;
       width: 100% !important;
       height: auto !important;
