--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -31,6 +31,9 @@ input, textarea, select {
   &:focus {
     box-shadow: $input-focus;
   }
+
+  &::-webkit-input-placeholder { color: rgba($text, 0.5); }
+  &::-moz-placeholder { color: rgba($text, 0.7); }
 }
 
 fieldset {
@@ -50,4 +53,256 @@ textarea {
 
 svg {
   transform: translate(-0.5px, -.5px);
+}
+
+
+[data-tooltip] {
+  position: relative;
+  z-index: 9;
+
+  /* Positioning and visibility settings of the tooltip */
+  &::before,
+  &::after {
+    position: absolute;
+    left: 50%;
+    bottom: calc(100% + 5px);
+
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+
+    transition: 0.1s;
+    will-change: transform;
+  }
+
+  /* The actual tooltip with a dynamic width */
+  &::before {
+    content: attr(data-tooltip);
+
+    width: max-content;
+    width: -moz-max-content;
+
+    padding: 2px 8px;
+    border-radius: $border-radius;
+    background-color: rgba(50, 50, 50, 0.8);
+    outline: 1px solid rgba(0, 0, 0, 0.2);
+    outline-offset: -1px;
+    box-shadow: var(--default-box-shadow);
+
+    color: #fff;
+    font-size: 10px;
+    font-weight: 700;
+    line-height: 20px;
+    text-align: center;
+    text-transform: none;
+    white-space: pre-wrap;
+
+    transform: translate(-50%, -5px) scale(0.5);
+  }
+  
+  // Tooltip arrow
+  &::after {
+    content: '';
+    border-style: solid;
+    border-width: 5px 5px 0 5px;
+    border-color: rgba(50, 50, 50, 0.8) transparent transparent transparent;
+
+    transform-origin: top;
+    transition-duration: 0s;
+    transform: translateX(-50%) scaleY(0);
+  }
+
+  @media (hover: hover) {
+    &:hover::before,
+    &:hover::after {
+      visibility: visible;
+      opacity: 1;
+    }
+    
+    &:hover::before {
+      transition-delay: 0.05s;
+      transform: translate(-50%, -5px) scale(1);
+    }
+    
+    &:hover::after {
+      transition-delay: 0.2s;
+      transition-duration: 0.1s;
+      transform: translateX(-50%) scaleY(1);
+    }
+  }
+
+  &.tooltip-open::before,
+  &.tooltip-open::after {
+    visibility: visible;
+    opacity: 1;
+  }
+  
+  &.tooltip-open::before {
+    transition-delay: 0.1s;
+    transform: translate(-50%, -5px) scale(1);
+  }
+  
+  &.tooltip-open::after {
+    transition-delay: 0.4s;
+    transition-duration: 0.2s;
+    transform: translateX(-50%) scaleY(1);
+  }
+}
+
+[data-tooltip-location="left"] {
+  opacity: 1;
+
+  &::before,
+  &::after {
+    left: auto;
+    bottom: 50%;
+    right: calc(100% + 5px);
+  }
+  /* Tooltip */
+  &::before {
+    transform: translate(-5px, 50%) scale(0.5);
+  }
+  
+  @media (hover: hover) {
+    &:hover::before {
+      transform: translate(-5px, 50%) scale(1);
+    }
+  }
+  &.tooltip-open::before {
+    transform: translate(-5px, 50%) scale(1);
+  }
+  /* Arrow */
+  &::after {
+    border-width: 5px 0 5px 5px;
+    border-color: transparent transparent transparent rgba(50, 50, 50, 1);
+    transform-origin: left;
+    transform: translateY(50%) scaleX(0);
+  }
+
+  @media (hover: hover) {
+    &:hover::after {
+      transform: translateY(50%) scaleX(1);
+    }
+  }
+
+  &.tooltip-open::after {
+    transform: translateY(50%) scaleX(1);
+  }
+}
+
+[data-tooltip-location="right"] {
+  &::before,
+  &::after {
+    bottom: 50%;
+    left: calc(100% + 5px);
+  }
+  &::before {
+    transform: translate(5px, 50%) scale(0.5);
+  }
+
+  @media (hover: hover) {
+    &:hover::before {
+      transform: translate(5px, 50%) scale(1);
+    }
+  }
+
+  &.tooltip-open::before {
+    transform: translate(5px, 50%) scale(1);
+  }
+
+  &::after {
+    border-width: 5px 5px 5px 0;
+    border-color: transparent rgba(50, 50, 50, 1) transparent transparent;
+    transform-origin: right;
+    transform: translateY(50%) scaleX(0);
+  }
+
+  @media (hover: hover) {
+    &:hover::after {
+      transform: translateY(50%) scaleX(1);
+    }
+  }
+  
+  &.tooltip-open::after {
+    transform: translateY(50%) scaleX(1);
+  }
+}
+
+[data-tooltip-location="bottom"] {
+  &::before,
+  &::after {
+    top: calc(100% + 5px);
+    bottom: auto;
+  }
+
+  &::before {
+    transform: translate(-50%, 5px) scale(0.5);
+  }
+
+  @media (hover: hover) {
+    &:hover::before {
+      transform: translate(-50%, 5px) scale(1);
+    }
+  }
+
+  &.tooltip-open::before {
+    transform: translate(-50%, 5px) scale(1);
+  }
+
+  &::after {
+    transform-origin: bottom;
+    border-width: 0 5px 5px 5px;
+    border-color: transparent transparent rgba(50, 50, 50, 1) transparent;
+  }
+}
+
+.button-group {
+  display: flex;
+  align-items: center;
+
+  .button {
+    border-radius: 0;
+  }
+
+  .button label {
+    margin: -6px -8px;
+    padding: 6px 8px;
+    cursor: pointer;
+  }
+
+  .button:first-of-type {
+    border-radius: $border-radius 0 0 $border-radius;
+    margin-right: -1px;
+  }
+
+  .button:last-of-type {
+    border-radius: 0 $border-radius $border-radius 0;
+    margin-left: -1px;
+  }
+}
+
+button,
+.button {
+  background-color: #ffffff;
+  border: 1px solid $lines;
+  padding: 6px 8px;
+  border-radius: $border-radius;
+  cursor: pointer;
+  display: flex;
+
+  svg {
+    stroke: #5B6274;
+    width: 20px;
+    height: 20px;
+  }
+
+  input:checked + & {
+    background-color: rgb(0, 123, 255);
+    border-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+  
+    svg {
+      stroke: #ffffff;
+    }
+  }
 }
