--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -1,256 +1,5 @@
 @use 'variables' as *;
 
-[data-tooltip] {
-  position: relative;
-  z-index: 9;
-
-  /* Positioning and visibility settings of the tooltip */
-  &::before,
-  &::after {
-    position: absolute;
-    left: 50%;
-    bottom: calc(100% + 5px);
-
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
-
-    transition: 0.1s;
-    will-change: transform;
-  }
-
-  /* The actual tooltip with a dynamic width */
-  &::before {
-    content: attr(data-tooltip);
-
-    width: max-content;
-    width: -moz-max-content;
-
-    padding: 2px 8px;
-    border-radius: $border-radius;
-    background-color: rgba(50, 50, 50, 0.8);
-    outline: 1px solid rgba(0, 0, 0, 0.2);
-    outline-offset: -1px;
-    box-shadow: var(--default-box-shadow);
-
-    color: #fff;
-    font-size: 10px;
-    font-weight: 700;
-    line-height: 20px;
-    text-align: center;
-    text-transform: none;
-    white-space: pre-wrap;
-
-    transform: translate(-50%, -5px) scale(0.5);
-  }
-  
-  // Tooltip arrow
-  &::after {
-    content: '';
-    border-style: solid;
-    border-width: 5px 5px 0 5px;
-    border-color: rgba(50, 50, 50, 0.8) transparent transparent transparent;
-
-    transform-origin: top;
-    transition-duration: 0s;
-    transform: translateX(-50%) scaleY(0);
-  }
-
-  @media (hover: hover) {
-    &:hover::before,
-    &:hover::after {
-      visibility: visible;
-      opacity: 1;
-    }
-    
-    &:hover::before {
-      transition-delay: 0.05s;
-      transform: translate(-50%, -5px) scale(1);
-    }
-    
-    &:hover::after {
-      transition-delay: 0.2s;
-      transition-duration: 0.1s;
-      transform: translateX(-50%) scaleY(1);
-    }
-  }
-
-  &.tooltip-open::before,
-  &.tooltip-open::after {
-    visibility: visible;
-    opacity: 1;
-  }
-  
-  &.tooltip-open::before {
-    transition-delay: 0.1s;
-    transform: translate(-50%, -5px) scale(1);
-  }
-  
-  &.tooltip-open::after {
-    transition-delay: 0.4s;
-    transition-duration: 0.2s;
-    transform: translateX(-50%) scaleY(1);
-  }
-}
-
-[data-tooltip-location="left"] {
-  opacity: 1;
-
-  &::before,
-  &::after {
-    left: auto;
-    bottom: 50%;
-    right: calc(100% + 5px);
-  }
-  /* Tooltip */
-  &::before {
-    transform: translate(-5px, 50%) scale(0.5);
-  }
-  
-  @media (hover: hover) {
-    &:hover::before {
-      transform: translate(-5px, 50%) scale(1);
-    }
-  }
-  &.tooltip-open::before {
-    transform: translate(-5px, 50%) scale(1);
-  }
-  /* Arrow */
-  &::after {
-    border-width: 5px 0 5px 5px;
-    border-color: transparent transparent transparent rgba(50, 50, 50, 1);
-    transform-origin: left;
-    transform: translateY(50%) scaleX(0);
-  }
-
-  @media (hover: hover) {
-    &:hover::after {
-      transform: translateY(50%) scaleX(1);
-    }
-  }
-
-  &.tooltip-open::after {
-    transform: translateY(50%) scaleX(1);
-  }
-}
-
-[data-tooltip-location="right"] {
-  &::before,
-  &::after {
-    bottom: 50%;
-    left: calc(100% + 5px);
-  }
-  &::before {
-    transform: translate(5px, 50%) scale(0.5);
-  }
-
-  @media (hover: hover) {
-    &:hover::before {
-      transform: translate(5px, 50%) scale(1);
-    }
-  }
-
-  &.tooltip-open::before {
-    transform: translate(5px, 50%) scale(1);
-  }
-
-  &::after {
-    border-width: 5px 5px 5px 0;
-    border-color: transparent rgba(50, 50, 50, 1) transparent transparent;
-    transform-origin: right;
-    transform: translateY(50%) scaleX(0);
-  }
-
-  @media (hover: hover) {
-    &:hover::after {
-      transform: translateY(50%) scaleX(1);
-    }
-  }
-  
-  &.tooltip-open::after {
-    transform: translateY(50%) scaleX(1);
-  }
-}
-
-[data-tooltip-location="bottom"] {
-  &::before,
-  &::after {
-    top: calc(100% + 5px);
-    bottom: auto;
-  }
-
-  &::before {
-    transform: translate(-50%, 5px) scale(0.5);
-  }
-
-  @media (hover: hover) {
-    &:hover::before {
-      transform: translate(-50%, 5px) scale(1);
-    }
-  }
-
-  &.tooltip-open::before {
-    transform: translate(-50%, 5px) scale(1);
-  }
-
-  &::after {
-    transform-origin: bottom;
-    border-width: 0 5px 5px 5px;
-    border-color: transparent transparent rgba(50, 50, 50, 1) transparent;
-  }
-}
-
-.button-group {
-  display: flex;
-  align-items: center;
-
-  .button {
-    border-radius: 0;
-  }
-
-  .button label {
-    margin: -6px -8px;
-    padding: 6px 8px;
-    cursor: pointer;
-  }
-
-  .button:first-of-type {
-    border-radius: $border-radius 0 0 $border-radius;
-    margin-right: -1px;
-  }
-
-  .button:last-of-type {
-    border-radius: 0 $border-radius $border-radius 0;
-    margin-left: -1px;
-  }
-}
-
-button,
-.button {
-  background-color: #ffffff;
-  border: 1px solid $lines;
-  padding: 6px 8px;
-  border-radius: $border-radius;
-  cursor: pointer;
-  display: flex;
-
-  svg {
-    stroke: #5B6274;
-    width: 20px;
-    height: 20px;
-  }
-
-  input:checked + & {
-    background-color: rgb(0, 123, 255);
-    border-color: rgba(0, 0, 0, 0.5);
-    z-index: 1;
-  
-    svg {
-      stroke: #ffffff;
-    }
-  }
-}
-
 .selectinator {
   display: grid;
   grid-template-columns: 1fr 38px;
@@ -377,6 +126,7 @@ button,
   border-radius: $border-radius;
   box-shadow: $paper;
   transition: padding 0.3s, margin 0.3s, opacity 0.2s;
+  //transition: all 5s;
   background-color: #ffffff;
 
   &::before {
@@ -433,31 +183,12 @@ button,
     overflow: hidden; 
     border-radius: $border-radius;
 
-    // &.rendering {
-    //   background: linear-gradient(270deg, #ffffff, rgba(51, 65, 85, 0.08), rgba(0, 0, 0, 0.07), #ffffff);
-    //   background-size: 200% 200%;
-    //   animation: loading 2s ease-in-out infinite;
-    // }
-
     &.rendering .scaler {
       transition: opacity 0.2s, transform 0s 0.2s;
       transform: scale(1) !important;
       opacity: 0;
     }
 
-    @keyframes loading {
-      0% {
-        background-position: 0% 50%;
-      }
-      50% {
-        background-position: 100% 50%;
-      }
-      100% {
-        background-position: 0% 50%;
-      }
-    }
-
-    /* HTML: <div class="loader"></div> */
     &.rendering:before {
       content: '';
       display: block;
@@ -476,6 +207,7 @@ button,
       background-size: 40% 40%;
       animation: l38 2s infinite; 
     }
+
     @keyframes l38 {
       100% {background-position: 100% 0,100% 100%,0 100%,0 0}
     }
@@ -512,7 +244,8 @@ button,
     opacity: 0 !important;
     position: absolute;
     overflow: hidden;
-    top: -100%;
+    z-index: -1;
+    //top: -100%;
   }
 }
 
