--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -416,6 +416,26 @@ body > main {
     svg {
       pointer-events: none;
     }
+
+    #upc-select-all,
+    #shipping-select-all {
+      margin-right: -1px;
+      border-radius: $border-radius 0 0 $border-radius;
+      transition-duration: 0.2s;
+
+      & + input + .button {
+        border-radius: 0;
+      }
+
+      &.select-all--checked,
+      &:active {
+        background-color: rgb(0, 123, 255);
+        border-color: rgba(51, 65, 85, 0.6);
+        z-index: 9;
+
+        svg { stroke: #ffffff; }
+      }
+    }
   
     input + button, input + .button{
       position: relative;
@@ -484,7 +504,7 @@ body > main {
       font-size: 12px;
       gap: 8px;
       line-height: 20px;
-      padding: 6px 16px;
+      padding: 6px 12px;
       transition: background-color 0.2s;
   
       svg {
@@ -515,5 +535,11 @@ body > main {
     align-items: center;
     overflow: auto;
     padding-bottom: 20px;
+    transition: opacity 0.2s;
+
+    body.canvas-animating & {
+      opacity: 0;
+      overflow: hidden;
+    }
   }
 }
