--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,13 +1,18 @@
-$accent: #1B3F5C;
-$text: #656E81;
+$accent: #1b3f5c;
+$text: #656e81;
 $lines: rgba(0, 0, 0, 0.15);
-$icons: #9197A5;
+$icons: #9197a5;
 $preview-icons: #111;
 $border-radius: 4px;
-$paper: rgb(255, 255, 255) 0px 0px 0px 0px, rgba(51, 65, 85, 0.1) 0px 0px 0px 1px, rgba(0, 0, 0, 0.05) 0px 20px 25px -5px, rgba(0, 0, 0, 0.05) 0px 8px 10px -6px;
-$inputs: rgba(51, 65, 85, 0.05) 0px 0px 0px 1px, rgba(0, 0, 0, 0.03) 0px 4px 6px -1px, rgba(0, 0, 0, 0.03) 0px 2px 3px -1px;
-$input-focus: rgba(0, 123, 255, 0.5) 0px 0px 0px 1px, rgba(0, 0, 0, 0.05) 0px 6px 8px 0px, rgba(0, 0, 0, 0.04) 0px 3px 4px 0px;
-$input-error: rgba(220, 0, 0, 0.5) 0px 0px 0px 1px, rgba(0, 0, 0, 0.05) 0px 6px 8px 0px, rgba(0, 0, 0, 0.04) 0px 3px 4px 0px;
+$paper: rgb(255, 255, 255) 0px 0px 0px 0px,
+  rgba(51, 65, 85, 0.1) 0px 0px 0px 1px, rgba(0, 0, 0, 0.05) 0px 20px 25px -5px,
+  rgba(0, 0, 0, 0.05) 0px 8px 10px -6px;
+$inputs: rgba(51, 65, 85, 0.05) 0px 0px 0px 1px,
+  rgba(0, 0, 0, 0.03) 0px 4px 6px -1px, rgba(0, 0, 0, 0.03) 0px 2px 3px -1px;
+$input-focus: rgba(0, 123, 255, 0.5) 0px 0px 0px 1px,
+  rgba(0, 0, 0, 0.05) 0px 6px 8px 0px, rgba(0, 0, 0, 0.04) 0px 3px 4px 0px;
+$input-error: rgba(220, 0, 0, 0.5) 0px 0px 0px 1px,
+  rgba(0, 0, 0, 0.05) 0px 6px 8px 0px, rgba(0, 0, 0, 0.04) 0px 3px 4px 0px;
 $error: rgba(220, 0, 0, 0.5);
 // Label
 $code-size: 60px;
