Shipping Mark meta: all caps

--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -557,9 +557,13 @@
 
   &__meta {
     line-height: 170%;
+    text-transform: uppercase;
   }
 
-  &__description { font-weight: 700; }
+  &__description { 
+    font-weight: 700; 
+    text-transform: none;
+  }
 
   &__source {
     text-transform: capitalize;
