--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,6 +1,6 @@
 @use 'variables' as *;
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=PT+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:wght@400;500;700&display=swap');
 
 body {
   font-family: 'Inter', sans-serif;
