--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -333,7 +333,6 @@
 
   &__upc {
     width: 100%;
-    height: 100px;
     overflow: hidden;
     position: relative;
     height: 72px;
@@ -414,7 +413,10 @@
     border: 1px solid #000000;
     padding: 2px;
     margin-bottom: 4px;
+    display: none;
   }
+
+  &__install--active { display: flex; }
 
     &__install-img {
       width: 24px;
@@ -551,6 +553,11 @@
     font-weight: 400;
   }
 
+  &__bottom {
+    width: 35%;
+    font-size: 30%;
+  }
+
   &__logo-img {
     height: 100px;
   }
@@ -636,13 +643,13 @@
   &__recycling {
     position: absolute;
     border: 4px solid #000000;
-    width: 3.5in;
-    bottom: 0.3in;
-    right: 4in;
+    width: 2.8in;
+    bottom: 0.1in;
+    right: 3.5in;
     border-radius: 0.1in;
-    padding: 0.15in;
+    padding: 0.1in;
 
-    font-size: 0.2in;
+    font-size: 0.15in;
     font-weight: 700;
     text-align: right;
     text-transform: uppercase;
@@ -653,19 +660,19 @@
     gap: 0.1in;
 
     svg {
-      width: 0.8in;
-      height: 0.8in;
+      width: 0.6in;
+      height: 0.6in;
     }
   }
 
   &__prop65 {
     position: absolute;
     border: 4px solid #000000;
-    width: 3.5in;
-    bottom: 0.3in;
-    right: 0.3in;
+    width: 3.35in;
+    bottom: 0.1in;
+    right: 0.1in;
     border-radius: 0.1in;
-    padding: 0.15in;
+    padding: 0.1in;
     font-size: 11px;
   }
 
@@ -756,14 +763,20 @@
   .label__item-sku:before { content: "SKU: "; }
   .label__quantity { margin-top: auto; }
   .page[data-type="polybag"] .label__info { margin-bottom: 4px; } 
+
+  .label__upc {
+    height: 60px;
+  }
 }
 
 // Vault Specific Styles
 .preview--vault {
   .download__button { background-color: #EE272F; }
 
+  .label__info { margin-top: auto; }
+  .label__item { display: grid; }
   .label__item-master::before { content: "Item: "; }
-  .label__item-sku::before { content: "/ SKU: "; }
+  .label__item-sku::before { content: "SKU: "; }
 }
 
 // Polybag Specific Styles
