--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -218,6 +218,7 @@ body > main {
     margin-top: 1px;
   }
 
+  .box__toggle,
   .qr__toggle,
   .qr__visibility {
     svg:last-child { display: none; stroke:rgba(0, 123, 255, 0.5); }
