Added Other factory to factory options, specifically only for VAULT

--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -109,6 +109,12 @@
     cursor: pointer;
   }
 
+  &-option--disabled {
+    color: #cccccc;
+    cursor: not-allowed;
+    pointer-events: none;
+  }
+
   &-option:hover,
   &-option.highlighted {
     background-color: rgb(0, 123, 255);
