--- a/src/scss/_sapona.scss
+++ b/src/scss/_sapona.scss
@@ -1,4 +1,6 @@
-.sapona {
+.sapona,
+.custom-factory,
+.factory {
   z-index: 1;
 
   .label {
@@ -9,6 +11,7 @@
   .label__brand {
     margin-bottom: auto;
   }
+
   .label__logo {
     height: 48px;
   }
@@ -18,6 +21,7 @@
     gap: 0;
     margin-bottom: auto;
     max-width: 4in;
+    width: 100%;
   }
 
   &__meta {
@@ -115,5 +119,68 @@
     position: absolute;
     overflow: hidden;
     z-index: -1;
+  }
+}
+
+.custom-factory {
+  
+  .label {
+    width: 3.937007874in;
+    height: 2.9527559055in;
+  }
+  .label__item-master::before { content: 'Item:'; }
+  .label__item-sku::before { content: 'SKU:'; }
+
+  .label__brand {
+    height: 28px;
+    margin-bottom: 0;
+
+    .print-logo {
+      height: 28px;
+    }
+  }
+
+  .sapona__meta,
+  .sapona__label,
+  .sapona__value,
+  .sapona__insert,
+  *::after,
+  *::before { 
+    font-size: 0.75rem !important; 
+    line-height: 1rem !important;
+  }
+
+
+  .label__item-master,
+  .shipping-mark__sku,
+  .shipping-mark__sku::before {
+    font-size: 0.8rem !important;
+  }
+
+  .label__upc {
+    position: absolute;
+    bottom: 36px;
+    right: 0;
+    width: 50%;
+
+    svg {
+      width: 100%;
+      left: 50%;
+      transform: translateX(-50%) scale(1) !important;
+    }
+  }
+
+  .custom-factory__description {
+    align-items: flex-start;
+  }
+
+  .label__datamatrix,
+  .label__datamatrix > svg {
+    width: 50px;
+    height: 50px;
+  }
+
+  .sapona__carton::after, .custom-factory__carton::after {
+    margin-left: 0.5in;
   }
 }
