--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -310,6 +310,19 @@
     color: magenta;
     margin: 2px 0 8px;
   }
+
+  .sku__part {
+    padding: 1% 0;
+    border: 2px solid transparent;
+  }
+
+  .preview--has-box & .sku__part {
+    border: 2px solid #000000;
+    border-right-width: 0;
+    padding: 1%;
+
+    &:last-child { border-right-width: 2px; }
+  }
 }
 
 .label {
@@ -551,19 +564,6 @@
 
     .page[data-type="shipping-front"] & {
       align-items: center;
-    }
-
-    .sku__part {
-      padding: 1% 0;
-      border: 2px solid transparent;
-    }
-
-    .preview--has-box & .sku__part {
-      border: 2px solid #000000;
-      border-right-width: 0;
-      padding: 1%;
-  
-      &:last-child { border-right-width: 2px; }
     }
   }
 
@@ -863,4 +863,12 @@
   border-radius: 1px;
   transition: outline 0.2s;
   z-index: 10;
+}
+
+.shipping-mark__dims {
+  opacity: 0;
+
+  &--active {
+    opacity: 1;
+  }
 }
