--- a/src/scss/_sapona.scss
+++ b/src/scss/_sapona.scss
@@ -47,9 +47,10 @@
     margin-top: 0;
 
     .sku__part{
-      border: 1px solid #000;
+      border-width: 1px;
       border-right-width: 0;
-      padding: 0 1%;
+      padding-top: 0;
+      padding-bottom: 0;
     }
 
     .sku__part:last-child{
